# jasper

./: .metadata  FLUTTER_VERSION  README 2.md  README.md  fix_environment.sh  install.sh  install_flutter.sh  pubspec.yaml  update_flutter.sh
apps/modules/common/: .gitignore  BUILD.gn  CONTRIBUTING.md  Makefile  README.md  dart_dependencies.yaml
apps/modules/common/fx_widget_explorer/: .gitignore  README.md  pubspec.yaml
apps/modules/common/fx_widget_explorer/lib/: app.dart  drawer.dart  embedded_child_builders.dart  home.dart  main.dart
apps/modules/common/infra/config/: cq.cfg  recipes.cfg
apps/modules/common/infra/recipes/: modules.py
apps/modules/common/modules/: .gitignore  BUILD.gn
apps/modules/common/modules/chess/: BUILD.gn  pubspec.yaml
apps/modules/common/modules/color/: BUILD.gn
apps/modules/common/modules/gallery/: .gitignore  BUILD.gn  Makefile  gallery_component.json  pubspec.yaml
apps/modules/common/modules/interactive_receipt/: BUILD.gn  (+2 more)
apps/modules/common/services/: BUILD.gn
apps/modules/common/testdata/: README.md
apps/modules/common/tests/: BUILD.gn
apps/modules/common/tools/: copyright_check.sh  update.sh
apps/sysui/: .gitignore  BUILD.gn  HACKING.md  README.md
apps/sysui/agents/: BUILD.gn
apps/sysui/agents/home_work_agent/: BUILD.gn
apps/sysui/agents/walking_agent/: BUILD.gn
apps/sysui/armadillo/: BUILD.gn  running_tests.md
apps/sysui/armadillo/lib/: armadillo.dart  context_model.dart  debug_model.dart  display_mode.dart  elevation_constants.dart  interruption_overlay.dart  main.dart  nothing.dart  now.dart  opacity_model.dart  optional_wrapper.dart  panel.dart  panel_drag_target.dart  panel_drag_targets.dart  panel_resizing_overlay.dart  place_holder_story.dart  quick_settings.dart  scroll_locker.dart  simulated_fractional.dart  simulated_fractionally_sized_box.dart  simulated_padding.dart  simulated_sized_box.dart  simulated_transform.dart  splash_painter.dart  splash_suggestion.dart  story.dart  story_builder.dart  story_cluster_panels_model.dart  story_cluster_stories_model.dart  story_cluster_widget.dart  story_drag_transition_model.dart  story_generator.dart  story_list_layout.dart  story_model.dart  story_positioned.dart  story_time_randomizer.dart  suggestion.dart  suggestion_list.dart  suggestion_model.dart  suggestion_widget.dart  (+5 more)
apps/sysui/armadillo/test/: candidate_info_test.dart  fading_spring_simulation_test.dart  panel_test.dart  story_list_test.dart
apps/sysui/armadillo_user_shell/: BUILD.gn  pubspec.yaml
apps/sysui/armadillo_user_shell/assets/: contextual_config.json
apps/sysui/armadillo_user_shell/lib/: armadillo_user_shell_model.dart  audio_policy_volume_model.dart  context_provider_context_model.dart  debug.dart  focus_request_watcher_impl.dart  hit_test_model.dart  initial_focus_setter.dart  initial_story_generator.dart  main.dart  story_importance_watcher_impl.dart  story_provider_story_generator.dart  story_provider_watcher_impl.dart  suggestion_provider_suggestion_model.dart  user_logoutter.dart
apps/sysui/capybara_user_shell/: BUILD.gn  pubspec.yaml
apps/sysui/capybara_user_shell/lib/: launcher.dart  launcher_toggle.dart  main.dart  root.dart  status_panel.dart  status_tray.dart  window_playground.dart
apps/sysui/capybara_user_shell/test/: dummy_test.dart
apps/sysui/docs/: code_reviews.md  dev_setup.md  documentation.md  performance.md  profiling.patch  setup.md
apps/sysui/infinite_scroller/: BUILD.gn
apps/sysui/infinite_scroller/lib/: main.dart
apps/sysui/infra/config/: cq.cfg
apps/sysui/kernel_panic/: BUILD.gn
apps/sysui/kernel_panic/lib/: kernel_panic.dart  main.dart  qr_code_widget.dart
apps/sysui/keyboard/: BUILD.gn  pubspec.yaml
apps/sysui/keyboard/lib/: keyboard.dart  keys.dart  word_suggestion_service.dart
apps/sysui/keyboard/test/: keyboard_test.dart  keys_test.dart
apps/sysui/spinning_cube/: BUILD.gn
apps/sysui/spinning_cube/lib/: main.dart  spinning_cube_gem.dart
apps/sysui/tools/: environment.sh
apps/sysui/userpicker_device_shell/: BUILD.gn  pubspec.yaml
apps/sysui/userpicker_device_shell/lib/: authentication_context_impl.dart  authentication_overlay.dart  authentication_overlay_model.dart  child_constraints_changer.dart  circular_button.dart  clock.dart  constraints_model.dart  debug_text.dart  device_extender.dart  device_extension_state.dart  main.dart  memory_indicator.dart  rounded_corner_decoration.dart  screen_manager.dart  soft_keyboard_container_impl.dart  user_picker.dart  user_picker_device_shell_model.dart  user_picker_screen.dart  user_shell_chooser.dart  user_watcher_impl.dart
apps/sysui/userpicker_device_shell/test/: constraints_model_test.dart
apps/sysui/widgets/: BUILD.gn  pubspec.yaml
apps/sysui/widgets/lib/: default_bundle.dart  icon_slider.dart  key_mappings.dart  quadrilateral_painter.dart  rk4_spring_simulation.dart  three_column_aligned_layout_delegate.dart  ticking_height_state.dart  time_stringer.dart
apps/sysui/widgets/test/: rk4_spring_simulation_test.dart
tools/dartfmt_extras/: BUILD.gn  analysis_options.yaml  pubspec.yaml
tools/dartfmt_extras/lib/: dartfmt_extras.dart
tools/dartfmt_extras/test/: directives_test.dart  double_quotes_test.dart  util.dart
tools/doc_checker/: BUILD.gn  README.md  analysis_options.yaml
tools/doc_checker/lib/: graph.dart  link_scraper.dart  projects.dart
tools/mod/: BUILD.gn  README.md  analysis_options.yaml  pubspec.yaml
tools/mod/lib/: commands.dart
tools/mod/templates/mod/: BUILD.gn  pubspec.yaml
tools/mod/test/: util.dart
tools/mod/test/commands/: create_test.dart
tools/widget_explorer/: BUILD.gn
tools/widget_explorer/testdata/: analysis_options.yaml  pubspec.yaml
tools/widget_explorer/testdata/gen_test/: config_key_widget.dart  generator_widget.dart  size_param_widget.dart  widget01.dart  widget03.dart
tools/widget_explorer/tools/widget_explorer_gen/: BUILD.gn  pubspec.yaml
topaz/public/dart/logging/: .analysis_options  BUILD.gn  pubspec.yaml
topaz/public/dart/modular/: .analysis_options  BUILD.gn  pubspec.yaml
topaz/public/dart/widgets/: BUILD.gn
(+241 files in other folders)
