# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/dart/dart_tool.gni")

dart_tool("doc_checker") {
  package_name = "doc_checker"

  main_dart = "bin/main.dart"

  sources = [
    "graph.dart",
    "link_scraper.dart",
    "projects.dart",
  ]

  deps = [
    "//third_party/dart-pkg/pub/args",
    "//third_party/dart-pkg/pub/http",
    "//third_party/dart-pkg/pub/markdown",
    "//third_party/dart-pkg/pub/path",
  ]
}
