# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("widget_explorer") {
  deps = [
    "packages/widget_explorer_core",
    "packages/widget_explorer_meta",
    "packages/widget_explorer_widgets",
    "tools/widget_explorer_gen",
  ]
}

group("tests") {
  testonly = true

  deps = [
    "packages/widget_explorer_core:widget_explorer_core_tests",
    # "tools/widget_explorer_gen:widget_explorer_gen_tests",
  ]
}
