# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//flutter/build/flutter_app.gni")

flutter_app("armadillo_user_shell") {
  main_dart = "lib/main.dart"

  package_name = "armadillo_user_shell"

  manifest = "pubspec.yaml"

  source_dir = "lib"

  analysis_options = "//apps/sysui/.analysis_options"

  deps = [
    "//application/lib/app/dart",
    "//apps/maxwell/services/context:context_dart",
    "//apps/maxwell/services/suggestion:suggestion_dart",
    "//apps/media/lib/dart",
    "//apps/modular/services/user:user_dart",
    "//apps/modules/common/packages/util",
    "//apps/modules/common/packages/widgets",
    "//apps/mozart/lib/flutter",
    "//apps/sysui/armadillo",
    "//apps/sysui/keyboard",
    "//apps/sysui/widgets",
    "//lib/fidl/dart",
    "//lib/flutter/packages/flutter",
    "//lib/flutter/packages/flutter_test",
    "//lib/widgets/packages/widgets:lib.widgets",
    "//third_party/dart-pkg/pub/intl",
  ]
}
