# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/dart/dart_test.gni")
import("//flutter/build/flutter_app.gni")

flutter_app("capybara_user_shell") {
  main_dart = "lib/main.dart"

  package_name = "capybara_user_shell"

  manifest = "pubspec.yaml"

  analysis_options = "//apps/sysui/.analysis_options"

  deps = [
    "//lib/flutter/packages/flutter",
    "//lib/widgets/packages/widgets:lib.widgets",
    "//third_party/dart-pkg/pub/meta",
  ]
}

dart_test("test") {
  analysis_options = "//apps/sysui/.analysis_options"

  deps = [
    ":capybara_user_shell_dart_package",
    "//third_party/dart-pkg/pub/test",
  ]
}
