# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//flutter/build/flutter_app.gni")

flutter_app("kernel_panic") {
  main_dart = "lib/main.dart"

  package_name = "kernel_panic"

  manifest = "pubspec.yaml"

  deps = [
    "//application/lib/app/dart",
    "//apps/sysui/third_party/QR-Code-generator/dart/qrcodegen",
    "//lib/flutter/packages/flutter",
    "//lib/widgets/packages/widgets:lib.widgets",
  ]
}
