# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/dart/dart_package.gni")
import("//build/dart/dart_test.gni")

dart_package("keyboard") {
  package_name = "keyboard"

  analysis_options = "//apps/sysui/.analysis_options"

  deps = [
    "//apps/sysui/widgets",
    "//lib/flutter/packages/flutter",
  ]
}

dart_test("test") {
  analysis_options = "//apps/sysui/.analysis_options"

  deps = [
    "//apps/sysui/keyboard",
    "//lib/flutter/packages/flutter_test",
    "//third_party/dart-pkg/pub/test",
  ]
}
