# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//flutter/build/flutter_app.gni")

flutter_app("spinning_cube") {
  main_dart = "lib/main.dart"

  package_name = "spinning_cube"

  manifest = "pubspec.yaml"

  deps = [
    "//lib/flutter/packages/flutter",
  ]
}
