# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/dart/dart_test.gni")
import("//flutter/build/flutter_app.gni")

flutter_app("userpicker_device_shell") {
  main_dart = "lib/main.dart"

  package_name = "userpicker_device_shell"

  manifest = "pubspec.yaml"

  analysis_options = "//apps/sysui/.analysis_options"

  deps = [
    "//application/lib/app/dart",
    "//apps/modular/services/auth/account:account_dart",
    "//apps/modular/services/device:device_dart",
    "//apps/mozart/lib/flutter",
    "//apps/mozart/services/input:input_dart",
    "//apps/mozart/services/views:views_dart",
    "//apps/sysui/widgets",
    "//lib/fidl/dart",
    "//lib/flutter/packages/flutter",
    "//lib/widgets/packages/logging:lib.logging",
    "//lib/widgets/packages/widgets:lib.widgets",
  ]
}

dart_test("test") {
  analysis_options = "//apps/sysui/.analysis_options"

  deps = [
    ":userpicker_device_shell_dart_package",
    "//lib/flutter/packages/flutter_test",
    "//third_party/dart-pkg/pub/test",
  ]
}
