# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("modules") {
  deps = [
    "chess",
    "color",
    "gallery",
    "gallery:gallery_component",
    "interactive_receipt",
    "interactive_receipt:interactive_receipt_component",
    "map",
    "map:map_component",
    "usps",
    "usps:usps_component",
    "youtube_related_videos",
    "youtube_related_videos:youtube_related_videos_component",
    "youtube_story",
    "youtube_story:youtube_story_component",
    "youtube_thumbnail",
    "youtube_thumbnail:youtube_thumbnail_component",
    "youtube_video",
    "youtube_video:youtube_video_component",
  ]
}
