# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//topaz/runtime/dart/dart_test.gni")
import("//build/dart/dart_tool.gni")

dart_tool("widget_explorer_gen") {
  package_name = "widget_explorer_gen"

  main_dart = "bin/widget_explorer_gen.dart"

  source_dir = "bin"
  sources = [
    "widget_explorer_gen.dart",
  ]

  deps = [
    "../../packages/widget_explorer_core",
  ]
}

# dart_test("widget_explorer_gen_tests") {
#   sources = [
#     "gen_test.dart",
#   ]

#   deps = [
#     "//third_party/dart-pkg/git/flutter/packages/flutter_test",
#     "//third_party/dart-pkg/pub/test",
#   ]
# }
