# Copyright 2017 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/dart/dart_package.gni")

dart_package("lib.logging") {
  package_name = "lib.logging"

  analysis_options = ".analysis_options"

  deps = [
    "//lib/fidl/dart",
    "//third_party/dart-pkg/pub/logging",
    "//third_party/dart-pkg/pub/stack_trace",
  ]
}
