# Copyright 2017 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/dart/dart_package.gni")

dart_package("lib.modular") {
  package_name = "lib.modular"

  analysis_options = ".analysis_options"

  deps = [
    "//application/lib/app/dart",
    "//apps/modular/services/agent:agent_dart",
    "//apps/modular/services/device:device_dart",
    "//apps/modular/services/module:module_dart",
    "//apps/modular/services/user:user_dart",
    "//lib/fidl/dart",
  ]
}
