# Copyright 2017 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/dart/dart_package.gni")
import("//build/dart/dart_test.gni")

dart_package("lib.widgets") {
  package_name = "lib.widgets"

  analysis_options = ".analysis_options"

  deps = [
    "//application/lib/app/dart",
    "//apps/modular/services/device:device_dart",
    "//apps/modular/services/module:module_dart",
    "//apps/modular/services/user:user_dart",
    "//apps/modules/common/packages/widgets_meta",
    "//apps/mozart/lib/flutter",
    "//apps/mozart/services/views:views_dart",
    "//lib/fidl/dart",
    "//lib/flutter/packages/flutter",
    "//lib/widgets/packages/modular:lib.modular",
  ]
}

dart_test("test") {
  analysis_options = ".analysis_options"

  deps = [
    "//lib/flutter/packages/flutter_test",
    "//lib/widgets/packages/widgets:lib.widgets",
    "//third_party/dart-pkg/pub/test",
  ]
}
