# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/component/component.gni")
import("//flutter/build/flutter_app.gni")

flutter_app("gallery") {
  main_dart = "lib/main.dart"

  manifest = "pubspec.yaml"

  deps = [
    "//application/lib/app/dart",
    "//application/services:services_dart",
    "//apps/modular/services/module:module_dart",
    "//apps/modular/services/story:story_dart",
    "//apps/modules/common/packages/config",
    "//apps/modules/common/packages/config_flutter",
    "//apps/modules/common/packages/widgets",
    "//apps/modules/common/services/gallery:gallery_dart",
    "//apps/mozart/lib/flutter",
    "//apps/mozart/services/views:views_dart",
    "//lib/fidl/dart",
    "//lib/flutter/packages/flutter",
    "//lib/widgets/packages/widgets:lib.widgets",
  ]

  analysis_options = "//apps/modules/common/.analysis_options"
}

fuchsia_component("gallery_component") {
  manifest = "gallery_component.json"
  flutter_program = ":gallery"
}
