# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//flutter/build/flutter_app.gni")

flutter_app("test_hello_flutter") {
  main_dart = "lib/main.dart"

  deps = [
    "//application/lib/app/dart",
    "//apps/modular/services/story:story_dart",
    "//apps/mozart/services/views:views_dart",
    "//lib/fidl/dart",
    "//lib/flutter/packages/flutter",
  ]

  analysis_options = "//apps/modules/common/.analysis_options"
}
